cmake_minimum_required(VERSION 3.0)
project(soil2)

add_library(soil2 STATIC etc1_utils.c image_DXT.c SOIL2.c image_helper.c)
target_link_libraries(soil2 glfw glad ${GLFW_LIBRARIES})
IF (UNIX AND NOT APPLE)
    target_link_libraries(soil2 X11)
ENDIF()
IF (APPLE)
    INCLUDE_DIRECTORIES(/System/Library/Frameworks)
    find_package(OpenGL REQUIRED)
    target_link_libraries(soil2 ${OPENGL_LIBRARIES})
ENDIF()
target_include_directories(soil2 PUBLIC ./)
